--- a/bq_project/models/staging/src_ecommerce.yml
+++ b/bq_project/models/staging/src_ecommerce.yml
@@ -12,13 +12,10 @@ sources:
             warn_after: {count: 12, period: hour}
             error_after: {count: 24, period: hour}
           loaded_at_field: created_at
-
+          config:
+            event_time: created_at
         - name: inventory_items
-
         - name: order_items
-
         - name: orders
-
         - name: products
-        
         - name: users
