--- a/bq_project/models/staging/stg_ecommerce__order_items.yml
+++ b/bq_project/models/staging/stg_ecommerce__order_items.yml
@@ -1,25 +1,40 @@
 models:
   - name: stg_ecommerce__order_items
-    description: ""
+    description: "Line items for the orders"
+    # model contract configuration for column name, data type and constraints
+    config:
+      contract:
+        enforced: true
     columns:
       - name: order_item_id
-        description: "Line items from orders"
+        data_type: INTEGER
+        constraints:
+          - type: not_null
         tests:
             - primary_key:
                 severity: error
             
 
       - name: order_id
+        data_type: INTEGER
+        constraints:
+          - type: not_null
         tests:
             - relationships:
                 to: ref('stg_ecommerce__orders')
                 field: order_id
 
       - name: user_id
+        data_type: INTEGER
+        constraints:
+          - type: not_null
         tests:
             - not_null
 
       - name: product_id
+        data_type: INTEGER
+        constraints:
+          - type: not_null
         tests:
             - not_null
             - relationships:
@@ -28,6 +43,7 @@ models:
 
 
       - name: item_sale_price
+        data_type: FLOAT64
         description: "How much the item is sold for"
         tests:
             - not_null
