--- a/bq_project/models/staging/stg_ecommerce__products.yml
+++ b/bq_project/models/staging/stg_ecommerce__products.yml
@@ -1,3 +1,5 @@
+version: 2
+
 models:
   - name: stg_ecommerce__products
     description: "Table of products on the online store"
@@ -36,5 +38,17 @@ models:
               
       - name: brand
         description: "Brand of the product"
+
+    latest_version: 2
+    versions:
+      - v: 1
+        columns:
+          - include: all
+            exclude: [brand]
+
+      - v: 2
+        columns:
+          - include: all
+        config:
+          alias: stg_ecommerce__products
         
-            
